--- a/etc/web.xml
+++ b/etc/web.xml
@@ -33,6 +33,13 @@
             com.sincerial.news.listener.ServletParameterMapper
         </listener-class>
     </listener>
+
+    <welcome-file-list>
+        <welcome-file>
+            index.jsp
+        </welcome-file>
+    </welcome-file-list>
+    
     <servlet>
         <servlet-name>Retriever</servlet-name>
         <servlet-class>com.sincerial.news.servlet.Retriever</servlet-class>
