--- a/etc/web.xml
+++ b/etc/web.xml
@@ -28,6 +28,10 @@
         <param-value>500</param-value>
     </context-param>
 
+    <session-config>
+        <session-timeout>1440</session-timeout>
+    </session-config>
+    
     <listener>
         <listener-class>
             com.sincerial.news.listener.ServletParameterMapper
@@ -50,6 +54,16 @@
         <servlet-class>com.sincerial.news.servlet.Liker</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>SignIn</servlet-name>
+        <servlet-class>com.sincerial.news.servlet.SignIn</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>SignOut</servlet-name>
+        <servlet-class>com.sincerial.news.servlet.SignOut</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>Retriever</servlet-name>
         <url-pattern>/feed</url-pattern>
@@ -58,5 +72,15 @@
     <servlet-mapping>
         <servlet-name>Liker</servlet-name>
         <url-pattern>/like</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>SignIn</servlet-name>
+        <url-pattern>/sign_in</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>SignOut</servlet-name>
+        <url-pattern>/sign_out</url-pattern>
     </servlet-mapping>
 </web-app>
